--- a/css/style.css
+++ b/css/style.css
@@ -14,20 +14,104 @@ h1 {
   font-weight: 500;
 }
 
+h3 {
+  text-align: center;
+  font-size: 32px;
+  font-weight: 700;
+  margin-top: 10px;
+  margin-bottom: 50px;
+}
+
+h2 {
+  font-size: 48px;
+}
+
+img {
+  max-width: 100%;
+}
+
+input,
+::placeholder {
+  font-family: "Quicksand", sans-serif;
+}
 .btn {
-    background-color: #f9b532;
-     width: 300px;
-    height: 100px;
-    margin-bottom: 10px;
-    margin-right: 10px;
-    border: none;
-    border-radius: 30px;
-    cursor: pointer;
-    font-size: 40px;
-    font-weight: 600;
-    text-decoration: none;
-    box-shadow: -10px 10px 2px 1px black;
-  }
+  background-color: #f9b532;
+  width: 300px;
+  height: 100px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+  font-size: 40px;
+  font-weight: 600;
+  text-decoration: none;
+  box-shadow: -10px 10px 2px 1px black;
+}
+
+.btn-form {
+  background-color: #f9b532;
+  padding: 10px;
+  border: none;
+  border-radius: 15px;
+  cursor: pointer;
+  width: 150px;
+  height: 50px;
+  font-size: 20px;
+  font-weight: 600;
+  box-shadow: -10px 10px 2px 1px black;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+img {
+  max-width: 100%;
+}
+
+.container {
+  max-width: 1200px;
+  margin: auto;
+  width: 100%;
+}
+
+.card {
+  width: 400px;
+  height: 600px;
+  margin: 20px;
+  background-color: #fff;
+  border-radius: 5%;
+  border: 2px solid #000;
+  box-shadow: -10px 10px 2px 1px black;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.flex-fill {
+  flex: 1 1 auto;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
+.justify-content-center {
+  justify-content: center;
+}
+
 /* style header */
 
 nav {
@@ -77,8 +161,6 @@ nav {
   cursor: pointer;
   opacity: 0;
   z-index: 2;
-
-  -webkit-touch-callout: none;
 }
 
 #menuToggle span {
@@ -93,14 +175,6 @@ nav {
   z-index: 1;
   transform-origin: 4px 0px;
   transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
-    opacity 0.55s ease;
-  -webkit-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
-    opacity 0.55s ease;
-  -moz-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
-    opacity 0.55s ease;
-  -ms-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
-    opacity 0.55s ease;
-  -o-transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
     opacity 0.55s ease;
 }
 
@@ -297,10 +371,6 @@ input {
   color: gray;
   width: 600px;
   height: 70px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
 }
 
 .connection {
@@ -326,43 +396,23 @@ input {
   justify-content: center;
   align-items: center;
   background-color: #41c2f4;
-  width: 80%;
+
   height: 60%;
   box-shadow: -10px 10px 2px 1px #69dc8a;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
 }
 
-.modify-account {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  font-size: 20px;
-  font-weight: 600;
-  margin-right: 50px;
-}
-
-.modify-account p {
-  margin-right: 50px;
-}
-
-.form-account select {
-  border: none;
+.left textarea {
   border-radius: 10px;
-  padding: 10px;
-  margin-bottom: 10px;
-  font-size: 40px;
-  font-weight: 600;
-  color: gray;
-  width: 600px;
-  height: 70px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
 }
+
+.form-account input {
+  width: 400px;
+  height: 50px;
+}
+​
+
+
+
 
 /* gallery style  */
 
@@ -414,7 +464,7 @@ h1 {
   margin-bottom: 15px;
 }
 .share {
-    height: 300px;
+  height: 300px;
   width: 75%;
   display: block;
   margin: auto;
@@ -428,7 +478,6 @@ h1 {
   box-shadow: -10px 10px 2px 1px #41c2f4;
 }
 
-
 .section1 {
   background-color: #41c2f4;
   width: 75%;
@@ -440,12 +489,9 @@ h1 {
   font-weight: bold;
   text-align: center;
   border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
   box-shadow: -10px 10px 2px 1px #69dc8a;
 }
+
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -455,23 +501,6 @@ h1 {
   margin: 30px;
 }
 
-.card {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 400px;
-  height: 400px;
-  margin: 20px;
-  background-color: #fff;
-  border-radius: 5%;
-  -webkit-border-radius: 5%;
-  -moz-border-radius: 5%;
-  -ms-border-radius: 5%;
-  -o-border-radius: 5%;
-  border: 2px solid #000;
-  box-shadow: -10px 10px 2px 1px #000;
-}
 .photo-container {
   width: 300px;
   height: 300px;
@@ -485,9 +514,9 @@ h1 {
 }
 
 .photo-container img {
-    width:100%; 
-    height:100%; 
-    border-radius: 13px;
+  width: 100%;
+  height: 100%;
+  border-radius: 13px;
 }
 .image-title {
   font-size: 40px;
