--- a/css/form.css
+++ b/css/form.css
@@ -45,7 +45,8 @@
   color: #fff;
   text-decoration: none;
 }
-.form {
+.form-search {
+  background-color: #41c2f4;
   width: 65%;
   height: 300px;
   margin: 0 auto;
@@ -63,7 +64,7 @@
 form input {
   font-size: 15px;
 }
-.form input {
+.form-search input {
   height: 40px;
   /* border: #000 solid 1px; */
   font-size: 15px;
@@ -73,7 +74,7 @@ form input {
   margin-bottom: 10px;
 }
 
-.container {
+.container-search {
   display: flex;
   flex-direction: column;
 }
