--- a/css/style.css
+++ b/css/style.css
@@ -492,7 +492,7 @@ h1 {
   box-shadow: -10px 10px 2px 1px #69dc8a;
 }
 
-.container {
+.container-gallery {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
