--- a/css/form.css
+++ b/css/form.css
@@ -61,7 +61,7 @@
   -ms-border-radius: 15px;
   -o-border-radius: 15px;
 }
-form input {
+.form-search form input {
   font-size: 15px;
 }
 .form-search input {
