--- a/css/style.css
+++ b/css/style.css
@@ -282,6 +282,8 @@ nav {
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
+
+
 form {
   display: flex;
   flex-direction: column;
@@ -388,6 +390,16 @@ input {
 
 /* style account */
 
+.container-account{
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  margin: 50px 30px;
+  
+}
+
 .form-account {
   margin: 0 10%;
   margin-bottom: 300px;
@@ -406,14 +418,16 @@ input {
   border-radius: 10px;
 }
 
+.right input {
+  display: block;
+  
+}
+
+
 .form-account input {
   width: 400px;
   height: 50px;
 }
-​
-
-
-
 
 /* gallery style  */
 
@@ -482,7 +496,7 @@ h1 {
 .section1 {
   background-color: #41c2f4;
   width: 75%;
-  display: block;
+
   margin: auto;
   margin-top: 60px;
   margin-bottom: 20px;
@@ -508,10 +522,6 @@ h1 {
   margin-top: 25px;
   border-radius: 5%;
   border: 2px solid #000;
-  -webkit-border-radius: 5%;
-  -moz-border-radius: 5%;
-  -ms-border-radius: 5%;
-  -o-border-radius: 5%;
 }
 
 .photo-container img {
