--- a/css/newsletter.style.css
+++ b/css/newsletter.style.css
@@ -1,37 +1,47 @@
-.newsletter {
-
-  background-color: #41c2f4;
+.newsletter{
+  margin: 84px;
+  background-color: #41C2F4;
   margin-bottom: 84px;
-  margin-top: 84px;
-  flex-wrap: wrap; 
+
+}
+.news{
+  display: flex;
+  justify-content: flex-end;
   align-items: center;
 }
-
-
-.text {
-  width: 600px;
-  height: 19px;
-  font-weight: 400;
-  font-size: 16px;
-  margin-left: 100px;
-
+.newsletter img{
+  height: 20px;   
 }
-
-.newsletter img {
-  height: 36px;
-  margin-top: 10px;
-  margin-left: 10px;
+.newsletter button{
+  background-color: #F9B532;
+  box-shadow: none;
+  padding: 10px;
+  margin: 0;
+  margin-top: 5px;
+  float: right;
+  border:none;
+  border-radius: 0 10px 10px 0;
+  cursor: pointer;
+  width: 100px;
+  height: 40px;
+  font-size: 12px;
+  font-weight: 600;
 }
-
-.newsletter input {
-  width: 575px;
-  height: 54px;
+.newsletter .news input{
+  border: none;
+  padding: 20px;
+  margin-top: 15px;
+  margin-bottom: 10px;
+  margin-left: 15px;
+  margin-right: 0;
+  font-size: 12px;
+  font-weight: 500;
+  color: #000;
+  width: 400px;
+  height: 30px;
   border-radius: 0;
 }
-.btn-newsletter {
-  border-radius: 0px 15px 15px 0px;
-  background: #f9b532;
-  width: 115px;
-  height: 54px;
+.newsletter p img{
+  margin-left: 5px;
+  margin-top: 5px;
 }
-
