Inputs pour chaque onglet et adaptation du JS

--- a/css/form.css
+++ b/css/form.css
@@ -172,6 +172,18 @@
 .box {
   display: flex;
 }
+
+/* afficher par défault */
+#formTrip {
+  display: block;
+}
+#formTransport {
+  display: none;
+}
+
+#formHebergement {
+  display: none;
+}
 #filtre {
   /*modalaucentre*/
   position: fixed;
@@ -179,12 +191,13 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 30%;
+  max-width: 50%;
   height: 1000px;
   background-color: rgba(255, 255, 255);
   z-index: 50;
   display: none;
   border-radius: 5px;
+  overflow: scroll;
 }
 
 #filter {
