--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,12 @@ input,
   box-shadow: -10px 10px 2px 1px black;
 }
 
+.btn-form:hover {
+  color: #F45741;
+  box-shadow: -10px 10px 2px 1px #F45741;
+
+}
+
 ul {
   list-style: none;
   padding-left: 0;
@@ -435,6 +441,11 @@ input {
   height: 50px;
 }
 
+.form-account input::placeholder {
+  font-size: 22px;
+  
+}
+
 /* gallery style  */
 
 .profil {
@@ -609,4 +620,38 @@ footer a {
   border-radius: 15px;
   
 } 
+
+
+.card-triper-container {
+  text-align: center;
+}
+.card-triper {
+  background-image: url("../images/background-cardTriper.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 1200px;
+  width: 1000px;
+  box-shadow: -10px 10px 2px 1px #69dc8a;
+  border-radius: 5px;
+  display: inline-block;
+
+  
+}
+
+.bottom-card-triper {
+  height: 400px;
+  width: 1000px;
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-size: 22px;
+  font-weight: bold;
+
+  background-color: #69dc8a;
+  border-radius: 5px;
+  box-shadow: -10px 10px 2px 1px #41c2f4;
+}
 
